package com.primefuel.fulltank.platform.payment.domain.model.commands;

public record RefundPaymentCommand(Long paymentId) {
}
