package com.primefuel.fulltank.platform.payment.domain.model.queries;

public record GetPaymentsByCompanyIdQuery(Long companyId) {
}
