package com.primefuel.fulltank.platform.payment.domain.model.valueobjects;

public enum PaymentMethod {
    BANK_TRANSFER,
    CREDIT_CARD,
    DEBIT_CARD,
    CASH
}
