package com.primefuel.fulltank.platform.payment.domain.model.valueobjects;

public enum PaymentStatus {
    PENDING,
    COMPLETED,
    FAILED,
    REFUNDED
}
