package com.primefuel.fulltank.platform.payment.interfaces.rest;

public class PaymentController {
}
