package com.primefuel.fulltank.platform.payment.interfaces.rest.resources;

public record CompletePaymentResource(String transactionReference) {
}
