@startuml payment
'==============================================================
' Bounded Context: Payment
' Capas: interfaces / application / domain / infrastructure
'==============================================================
title Bounded Context - Payment

skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
left to right direction

skinparam package {
  BackgroundColor<<interfaces>>     #FDF2E9
  BackgroundColor<<application>>    #EAF2F8
  BackgroundColor<<domain>>         #E9F7EF
  BackgroundColor<<infrastructure>> #F4ECF7
}

' =========================== INTERFACES ===========================
package "interfaces.rest" <<interfaces>> {
  class PaymentsController
  class PaymentController

  package "resources" {
    class CreatePaymentResource <<record>>
    class CompletePaymentResource <<record>>
    class PaymentResource <<record>>
  }
  package "transform" {
    class CreatePaymentCommandFromResourceAssembler
    class PaymentResourceFromEntityAssembler
  }
}

' =========================== APPLICATION ===========================
package "application" <<application>> {
  interface PaymentCommandService
  interface PaymentQueryService
  package "internal" {
    class PaymentCommandServiceImpl
    class PaymentQueryServiceImpl
  }
}

' =========================== DOMAIN ===========================
package "domain" <<domain>> {
  package "model.aggregates" {
    class Payment {
      - Long id
      - Long orderId
      - Long companyId
      - Double amount
      - PaymentStatus status
      - PaymentMethod paymentMethod
      - String transactionReference
      - LocalDateTime paidAt
      + complete(String)
      + refund()
      + fail()
    }
  }
  package "model.valueobjects" {
    enum PaymentStatus {
      PENDING
      COMPLETED
      FAILED
      REFUNDED
    }
    enum PaymentMethod {
      BANK_TRANSFER
      CREDIT_CARD
      DEBIT_CARD
      CASH
    }
  }
  package "model.commands" {
    class CreatePaymentCommand <<record>>
    class CompletePaymentCommand <<record>>
    class RefundPaymentCommand <<record>>
  }
  package "model.queries" {
    class GetAllPaymentsQuery <<record>>
    class GetPaymentByIdQuery <<record>>
    class GetPaymentByOrderIdQuery <<record>>
    class GetPaymentsByCompanyIdQuery <<record>>
  }
  package "repositories" {
    interface PaymentRepository
  }
}

' =========================== INFRASTRUCTURE ===========================
package "infrastructure" <<infrastructure>> {
  package "persistence.jpa.adapters" {
    class PaymentRepositoryImpl
  }
  package "persistence.jpa.entities" {
    class PaymentPersistenceEntity <<entity>>
  }
  package "persistence.jpa.repositories" {
    interface PaymentPersistenceRepository
  }
  package "persistence.jpa.assemblers" {
    class PaymentPersistenceAssembler
  }
}

' =========================== RELACIONES ===========================
PaymentsController ..> PaymentCommandService
PaymentsController ..> PaymentQueryService

PaymentCommandServiceImpl ..|> PaymentCommandService
PaymentQueryServiceImpl ..|> PaymentQueryService

PaymentCommandServiceImpl ..> PaymentRepository
PaymentCommandServiceImpl ..> Payment
PaymentQueryServiceImpl ..> PaymentRepository

Payment --> PaymentStatus
Payment --> PaymentMethod

PaymentRepositoryImpl ..|> PaymentRepository
PaymentRepositoryImpl ..> PaymentPersistenceRepository
PaymentRepositoryImpl ..> PaymentPersistenceAssembler
PaymentPersistenceAssembler ..> PaymentPersistenceEntity
PaymentPersistenceAssembler ..> Payment
@enduml
